--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img class="im1" src="Captura de Tela (4).png" alt="">
         <p class="p2">PÁGINA DE PRODUTO LEALPHONE</p>
     </a></section>
-    <section><a class="a3" href="">
+    <section><a class="a3" href="https://gabrielmarquesdeassis2008-oss.github.io/lgpd1/">
         <img class="im1" src="Captura de Tela (5).png" alt="">
         <p class="p2">PÁGINA DE CONTEÚDO LGPD</p>
     </a></section>
