--- a/biografia.html
+++ b/biografia.html
@@ -10,7 +10,7 @@
 <body>
     <nav><a href="index.html" class="a1">HOME</a>
         <a href="biografia.html" class="a2">SOBRE MIM</a>
-        <a href="form.html]" class="a1">CONTATO</a></nav>
+        <a href="form.html" class="a1">CONTATO</a></nav>
 <div class="di1">
 <img class="img" src="IMG_1393.jpeg" alt="">
 </div>
